fix(slideout-stack): Set backdrop and slideout z-index

--- a/projects/slideout-stack/src/theme/styles.scss
+++ b/projects/slideout-stack/src/theme/styles.scss
@@ -1,3 +1,8 @@
+.backdrop,
+.slideout {
+  z-index: 99999;
+}
+
 .backdrop {
   position: absolute;
   top: 0;
